@@ -64,7 +64,7 @@ public:
 
     virtual bool Show(bool show = TRUE);
 
-    virtual bool HasFocus();
+    virtual bool IsActive();
 
     virtual void SetTitle( const wxString &title );
     virtual wxString GetTitle() const { return m_title; }
